--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bwip-js": "^4.5.1",
     "canvas": "^2.11.2",
-    "pdfkit": "^0.15.1"
+    "pdfkit": "^0.15.1",
+    "sharp": "^0.33.5"
   }
 }
